<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    android:background="@drawable/one"
    android:gravity="center"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/registerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meals on Demand"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:textColor="#F44336"
            />

        <EditText
            android:id="@+id/lgUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_person_pin_24"
            android:hint="Username"
            android:drawableTint="@color/black"
            android:textColorHint="#036A77"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/lgPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint="Password"
            android:drawableTint="@color/black"
            android:textColorHint="#036A77"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:backgroundTint="#3C3437"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textSize="20sp"
                android:textColor="#F44336"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/signup"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="SignupLink"
                android:text="@string/signup"
                android:textColor="#02109E"
                android:textSize="22sp"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>