<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="55dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/registerLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CREATE NEW ACCOUNT"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="#02707E"
           />

        <EditText
            android:id="@+id/rgFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:hint="Full Name"
            android:drawablePadding="20dp"
            android:drawableTint="@color/black"
            android:alpha="0.7"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/rgEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="Email"
            android:drawableTint="@color/black"
            android:textColorHint="@color/black"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/rgUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_person_pin_24"
            android:hint="Username"
            android:drawableTint="@color/black"
            android:textColorHint="@color/black"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/rgPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint="Password"
            android:drawableTint="@color/black"
            android:textColorHint="@color/black"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/rgCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:alpha="0.7"
            android:drawableLeft="@drawable/ic_baseline_verified_user_24"
            android:hint="Confirm Password"
            android:drawableTint="@color/black"
            android:textColorHint="@color/black"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:backgroundTint="#FF5722"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/login"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="loginLink"
                android:text="@string/login"
                android:textColor="#BF350A"
                android:textSize="22sp"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>