<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_baseline_explore_24"
        android:iconTint="@color/black"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_baseline_add_24"
        android:iconTint="@color/black"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:iconTint="@color/black"
        android:title="@string/title_search" />

</menu>